# swab

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
crates/swab-changelog/: Cargo.toml
crates/swab-changelog/src/: main.rs
src/: action.rs  age.rs  arguments.rs  bytes.rs  config.rs  context.rs  detection.rs  main.rs  path_ext.rs  report.rs  rule.rs  subcommand.rs  system_time_ext.rs  task.rs
src/rule/: cabal.rs  cargo.rs  cmake.rs  composer.rs  dotnet.rs  elixir.rs  godot.rs  gradle.rs  jupyter.rs  maven.rs  node.rs  pixi.rs  pub_.rs  python.rs  rust.rs  sbt.rs  stack.rs  swift.rs  turborepo.rs  unity.rs  unreal.rs  zig.rs
src/subcommand/: rules.rs
tests/: integration.rs
